--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,7 +25,7 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <p></p>
   <script src="..js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
@@ -36,6 +36,122 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
+
+  <!-- HEADER -->
+  <header>
+    <!--logo-->
+    <div>
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <!--navigation-->
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" rel="noopener">FAQ</a></li>
+          <li><a href="about/index.html" rel="noopener">About</a></li>
+        </ul>
+      </nav>
+    </div>
+    <!--faq-->
+    <!--about-->
+  </header>
+  <!-- MAIN -->
+  <main>
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      </div>
+    </section>
+    <aside>
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3>Want to enjoy the next retreat?</h3>
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+          <div class="form">
+            <h3>Find out more</h3>
+            <input type="text" name="name" value="name@email.com">
+            <input type="button" value="Download Itinerary">
+          </div>
+        </div>
+
+    </aside>
+    <!--Headline-->
+    <!--NEWSLETTER SIGNUP-->
+    <!--INFO ABOUT UNPLUGGED-->
+    <!--PREVIOUS RETREATS-->
+    <section class="features">
+      <div class="content-wrapper">
+        <!-- Add your Features content here -->
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+        </article>
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms,
+            and 4 breakout rooms.</p>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team
+              kitchen.</p>
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">5 outdoor obstacle courses, including private beach a 1/2 mile from
+                the bungalow.</p>
+              <article>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">Retreat facilitator to manage your day to day activities so you
+                  all get a chance to reset.</p>
+              </article>
+              <article>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">Dedicated computer room for times you must wifi.</p>
+              </article>
+              <article>
+                <h2 class="fontawesome-icon"></h2>
+                <h2 class="features-item-description">Be a better team in 5 days, like this one.</h2>
+              </article>
+      </div>
+    </section>
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h3>LaCrue Bottling Co. <br> October 2018</h3>
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+          ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+          nulla pariatur.
+        </p>
+      </div>
+    </section>
+  </main>
+  <!--FOOTER-->
+  <!--Contact-->
+  <!--Social Media-->
+  <!--Copyright-->
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>
+            <p>555-555-5555
+              hello@unplugged.com</p>
+          </address>
+        </div>
+      </div>
+    </div>
+    <div class="social">
+      <h4>Social</h4>
+      <div class="social-icons">
+        <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a></p>
+        <!-- other social links here -->
+        <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener"></a></p>
+        <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"></a></p>
+      </div>
+    </div> <!-- footer content ends -->
+    <div class="copyright">
+      <p>Copyright 202X | Unplugged</p>
+    </div>
+    </div> <!--footer content-wrapper ends-->
+  </footer>
 </body>
 
 </html>
