--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Faq Section</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,7 +25,6 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="..js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
@@ -36,6 +35,92 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
+
+  <!-- HEADER -->
+  <header>
+    <!--logo-->
+    <div>
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <!--navigation-->
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" rel="noopener">FAQ</a></li>
+          <li><a href="about/index.html" rel="noopener">About</a></li>
+        </ul>
+      </nav>
+    </div>
+    <!--faq-->
+    <!--about-->
+  </header>
+
+  <!-- MAIN -->
+  <main>
+    <section class="questions">
+      <div class="content-wrapper">
+        <h2>Frequently Asked Questions</h2>
+        <div class="questions-asked">
+          <h4>How do I get to the Unplugged retreat?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+            facilisis.</p>
+          <h4>What kind of team is right for the Unplugged retreat?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+            facilisis.</p>
+          <h4>What size teams can you accommodate?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+            facilisis.</p>
+          <h4>Is there really no wifi available?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+            facilisis.</p>
+        </div>
+      </div> <!-- mission content wrapper ends -->
+    </section>
+
+    <section class="map">
+      <figure>
+      </figure>
+    </section>
+  </main>
+
+
+  <!--FOOTER-->
+  <!--Contact-->
+  <!--Social Media-->
+  <!--Copyright-->
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>
+            <p>555-555-5555<br>
+              hello@unplugged.com</p>
+          </address>
+        </div>
+      </div>
+    </div>
+    <div class="social">
+      <h4>Social</h4>
+      <div class="social-icons">
+        <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a></p>
+        <!-- other social links here -->
+        <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener"></a></p>
+        <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"></a></p>
+      </div>
+    </div> <!-- footer content ends -->
+    <div class="copyright">
+      <p>Copyright 202X | Unplugged</p>
+    </div>
+    </div> <!--footer content-wrapper ends-->
+  </footer>
+
 </body>
 
 </html>
