--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
             ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur.
           </p>
-        </article>
+      </div>
+      </article>
       </div>
     </section>
   </main>
@@ -138,20 +139,19 @@
               hello@unplugged.com</p>
           </address>
         </div>
-      </div>
-    </div>
-    <div class="social">
-      <h4>Social</h4>
-      <div class="social-icons">
-        <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a></p>
-        <!-- other social links here -->
-        <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener"></a></p>
-        <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"></a></p>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p><a href="https://www.facebook.com/Skillcrush" target="_blank" rel="noopener"></a></p>
+            <!-- other social links here -->
+            <p><a href="https://www.twitter.com/Skillcrush" target="_blank" rel="noopener"></a></p>
+            <p><a href="https://www.instagram.com/Skillcrush" target="_blank" rel="noopener"></a></p>
+          </div>
+        </div>
       </div>
     </div> <!-- footer content ends -->
     <div class="copyright">
       <p>Copyright 202X | Unplugged</p>
-    </div>
     </div> <!--footer content-wrapper ends-->
   </footer>
 </body>
