--- a/faq/index.html
+++ b/faq/index.html
@@ -55,10 +55,10 @@
 
   <!-- MAIN -->
   <main>
-    <section class="questions">
+    <section class="faq">
       <div class="content-wrapper">
         <h2>Frequently Asked Questions</h2>
-        <div class="questions-asked">
+        <div class="faq-area">
           <h4>How do I get to the Unplugged retreat?</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
