Added widths, margins, padding

--- a/about/index.html
+++ b/about/index.html
@@ -42,6 +42,8 @@
     <div>
       <a href="#"><img src="" alt="unplugged logo"></a>
       <!--navigation-->
+       <div class="header-divider"></div>
+
       <nav>
         <ul>
           <li><a href="faq/index.html" rel="noopener">FAQ</a></li>
