--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <div>
       <a href="#"><img src="" alt="unplugged logo"></a>
       <!--navigation-->
+      <div class="header-divider"></div>
+
       <nav>
         <ul>
           <li><a href="faq/index.html" rel="noopener">FAQ</a></li>
@@ -71,7 +73,7 @@
             <input type="button" value="Download Itinerary">
           </div>
         </div>
-
+      </div>
     </aside>
     <!--Headline-->
     <!--NEWSLETTER SIGNUP-->
@@ -79,25 +81,28 @@
     <!--PREVIOUS RETREATS-->
     <section class="features">
       <div class="content-wrapper">
-        <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
         <!-- Add your Features content here -->
         <div class="features-items">
+          <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
           <article>
             <p class="fontawesome-icon"></p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
           </article>
           <article>
             <p class="fontawesome-icon"></p>
-            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms,
-              and 4 breakout rooms.</p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
+              breakout rooms.</p>
+            </article>
             <article>
               <p class="fontawesome-icon"></p>
               <p class="features-item-description">Private chef team providing on demand meals - just like your team
                 kitchen.</p>
+              </article>
               <article>
                 <p class="fontawesome-icon"></p>
                 <p class="features-item-description">5 outdoor obstacle courses, including private beach a 1/2 mile from
                   the bungalow.</p>
+                </article>
                 <article>
                   <p class="fontawesome-icon"></p>
                   <p class="features-item-description">Retreat facilitator to manage your day to day activities so you
@@ -113,6 +118,7 @@
     <section class="reviews">
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
+        <div>
         <article>
           <h3>LaCrue Bottling Co. <br> October 2018</h3>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
