--- a/faq/index.html
+++ b/faq/index.html
@@ -7,19 +7,21 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -39,15 +41,15 @@
   <!-- HEADER -->
   <header>
     <!--logo-->
-    <div>
+    <div class="content-wrapper">
       <a href="#"><img src="" alt="unplugged logo"></a>
       <!--navigation-->
-       <div class="header-divider"></div>
+      <div class="header-divider"></div>
 
       <nav>
         <ul>
-          <li><a href="faq/index.html" rel="noopener">FAQ</a></li>
-          <li><a href="about/index.html" rel="noopener">About</a></li>
+          <li><a href="faq/index.html">FAQ</a></li>
+          <li><a href="about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
@@ -106,15 +108,15 @@
               hello@unplugged.com</p>
           </address>
         </div>
-      </div>
-    </div>
-    <div class="social">
-      <h4>Social</h4>
-      <div class="social-icons">
-        <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a></p>
-        <!-- other social links here -->
-        <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener"></a></p>
-        <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"></a></p>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a></p>
+            <!-- other social links here -->
+            <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener"></a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"></a></p>
+          </div>
+        </div>
       </div>
     </div> <!-- footer content ends -->
     <div class="copyright">
