--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
@@ -20,12 +15,17 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
 
   <!-- Add your site or application content here -->
-  <p></p>
   <script src="..js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
@@ -40,15 +40,15 @@
   <!-- HEADER -->
   <header>
     <!--logo-->
-    <div>
+    <div class="content-wrapper">
       <a href="#"><img src="" alt="unplugged logo"></a>
       <!--navigation-->
       <div class="header-divider"></div>
 
       <nav>
         <ul>
-          <li><a href="faq/index.html" rel="noopener">FAQ</a></li>
-          <li><a href="about/index.html" rel="noopener">About</a></li>
+          <li><a href="faq/index.html">FAQ</a></li>
+          <li><a href="about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
@@ -65,13 +65,13 @@
     <aside>
       <div class="content-wrapper">
         <div class="form-description">
-          <h3>Want to enjoy the next retreat?</h3>
+          <h3>Want to join the next retreat?</h3>
           <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-          <div class="form">
-            <h3>Find out more</h3>
-            <input type="text" name="name" value="name@email.com">
-            <input type="button" value="Download Itinerary">
-          </div>
+        </div>
+        <div class="form">
+          <h3>Find out more</h3>
+          <input type="text" name="name" value="name@email.com">
+          <input type="button" value="Download Itinerary">
         </div>
       </div>
     </aside>
@@ -82,8 +82,8 @@
     <section class="features">
       <div class="content-wrapper">
         <!-- Add your Features content here -->
+        <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
         <div class="features-items">
-          <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
           <article>
             <p class="fontawesome-icon"></p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
@@ -92,42 +92,43 @@
             <p class="fontawesome-icon"></p>
             <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
               breakout rooms.</p>
-            </article>
-            <article>
-              <p class="fontawesome-icon"></p>
-              <p class="features-item-description">Private chef team providing on demand meals - just like your team
-                kitchen.</p>
-              </article>
-              <article>
-                <p class="fontawesome-icon"></p>
-                <p class="features-item-description">5 outdoor obstacle courses, including private beach a 1/2 mile from
-                  the bungalow.</p>
-                </article>
-                <article>
-                  <p class="fontawesome-icon"></p>
-                  <p class="features-item-description">Retreat facilitator to manage your day to day activities so you
-                    all get a chance to reset.</p>
-                </article>
-                <article>
-                  <p class="fontawesome-icon"></p>
-                  <p class="features-item-description">Dedicated computer room for times you must wifi.</p>
-                </article>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team
+              kitchen.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach a 1/2 mile from
+              the bungalow.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you
+              all get a chance to reset.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Dedicated computer room for times you must wifi.</p>
+          </article>
         </div>
       </div>
     </section>
     <section class="reviews">
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
-        <div>
         <article>
-          <h3>LaCrue Bottling Co. <br> October 2018</h3>
-          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur.
-          </p>
-      </div>
-      </article>
+          <div>
+            <h3>LaCrue Bottling Co. <br> October 2018</h3>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              fugiat
+              nulla pariatur.
+            </p>
+          </div>
+        </article>
       </div>
     </section>
   </main>
@@ -160,6 +161,7 @@
       <p>Copyright 202X | Unplugged</p>
     </div> <!--footer content-wrapper ends-->
   </footer>
+
 </body>
 
 </html>
