--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
-    <!-- Google Fonts -->
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -41,10 +41,11 @@
   <header>
     <!--logo-->
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
-      <!--navigation-->
+      <figure>
+        <a href="unpluggedlogo"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
+      </figure>
       <div class="header-divider"></div>
-
+      <!--navigation-->
       <nav>
         <ul>
           <li><a href="faq/index.html">FAQ</a></li>
@@ -134,17 +135,6 @@
     </div>
     </div> <!--footer content-wrapper ends-->
   </footer>
-
-
-
-
-
-
-
-
-
-
-
 
 </body>
 
