--- a/faq/index.html
+++ b/faq/index.html
@@ -42,10 +42,11 @@
   <header>
     <!--logo-->
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
-      <!--navigation-->
+      <figure>
+        <a href="unpluggedlogo"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
+      </figure>
       <div class="header-divider"></div>
-
+      <!--navigation-->
       <nav>
         <ul>
           <li><a href="faq/index.html">FAQ</a></li>
