--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
   <header>
     <!--logo-->
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
-      <!--navigation-->
+      <figure>
+        <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+      </figure>
       <div class="header-divider"></div>
-
+      <!--navigation-->
       <nav>
         <ul>
           <li><a href="faq/index.html">FAQ</a></li>
@@ -119,6 +120,9 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
         <article>
+          <figure>
+            <a href="#"><img src="img/unplugged-retreat-lacrue.jpg" alt="Group of happy people outside"></a>
+          </figure>
           <div>
             <h3>LaCrue Bottling Co. <br> October 2018</h3>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
