--- a/faq/index.html
+++ b/faq/index.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+  <script src="https://kit.fontawesome.com/31b0f6fc1e.js" crossorigin="anonymous"></script>
 
   <meta name="theme-color" content="#fafafa">
   <!-- Google Fonts -->
