--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <script src="https://kit.fontawesome.com/31b0f6fc1e.js" crossorigin="anonymous"></script>
 
   <meta name="theme-color" content="#fafafa">
   <!-- Google Fonts -->
@@ -21,6 +22,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
+
 </head>
 
 <body>
@@ -86,31 +88,31 @@
         <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
         <div class="features-items">
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon"><i class="fas fa-campground"></i></p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon"><i class="fas fa-bed"></i></p>
             <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
               breakout rooms.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon"><i class="fas fa-utensils"></i></p>
             <p class="features-item-description">Private chef team providing on demand meals - just like your team
               kitchen.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon"><i class="fas fa-shoe-prints"></i></p>
             <p class="features-item-description">5 outdoor obstacle courses, including private beach a 1/2 mile from
               the bungalow.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon"><i class="fas fa-smile"></i></p>
             <p class="features-item-description">Retreat facilitator to manage your day to day activities so you
               all get a chance to reset.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon"><i class="fas fa-wifi"></i></p>
             <p class="features-item-description">Dedicated computer room for times you must wifi.</p>
           </article>
         </div>
