--- a/about/index.html
+++ b/about/index.html
@@ -90,7 +90,7 @@
         <h2>Contact us, because you all need this.</h2>
         <div class="contact-content">
           <div>
-            <h4>General information</h4>
+            <h4>General Information</h4>
             <address>
               <p> 333 Main St, Lake Geneva, WI 53147<br>
                 5555-555-5555<br>
@@ -127,10 +127,13 @@
         <div class="social">
           <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a></p>
+            <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"><i
+                  class="fab fa-facebook-f"></i></a></p>
             <!-- other social links here -->
-            <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener"></a></p>
-            <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"></a></p>
+            <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener"><i
+                  class="fab fa-twitter"></i></a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"><i
+                  class="fab fa-instagram"></i></a></p>
           </div>
         </div>
       </div>
