--- a/faq/index.html
+++ b/faq/index.html
@@ -60,39 +60,38 @@
   </header>
 
   <!-- MAIN -->
-  <main>
-    <section class="faq">
-      <div class="content-wrapper">
-        <h2>Frequently Asked Questions</h2>
-        <div class="faq-area">
-          <h4>How do I get to the Unplugged retreat?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-            facilisis.</p>
-          <h4>What kind of team is right for the Unplugged retreat?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-            facilisis.</p>
-          <h4>What size teams can you accommodate?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-            facilisis.</p>
-          <h4>Is there really no wifi available?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-            facilisis.</p>
-        </div>
-      </div> <!-- mission content wrapper ends -->
-    </section>
-
-    <section class="map">
-      <figure>
-      </figure>
-    </section>
+  <main class="faq">
+    <div class="content-wrapper">
+      <h1>Frequently Asked Questions</h1>
+      <div class="faq-content">
+        <h2>How do I get to the Unplugged retreat?</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore
+          magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+          facilisis.</p>
+      </div>
+      <div class="faq-content">
+        <h2>What kind of team is right for the Unplugged retreat?</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore
+          magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+          facilisis.</p>
+      </div>
+      <div class="faq-content">
+        <h2>What size teams can you accommodate?</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore
+          magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+          facilisis.</p>
+      </div>
+      <div class="faq-content">
+        <h2>Is there really no wifi available?</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore
+          magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+          facilisis.</p>
+      </div>
+    </div> <!-- mission content wrapper ends -->
   </main>
 
 
@@ -113,10 +112,13 @@
         <div class="social">
           <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a></p>
+            <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"><i
+                  class="fab fa-facebook-f"></i></a></p>
             <!-- other social links here -->
-            <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener"></a></p>
-            <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"></a></p>
+            <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener"><i
+                  class="fab fa-twitter"></i></a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"><i
+                  class="fab fa-instagram"></i></a></p>
           </div>
         </div>
       </div>
