Fixed up paddings and font sizes

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         </div>
         <div class="form">
           <h3>Find out more</h3>
+          <p>Enter your email address to recieve our itinery: </p>
           <input type="text" name="name" value="name@email.com">
           <input type="button" value="Download Itinerary">
         </div>
